...
import org.jetbrains.compose.resources.stringResource

@Composable
fun SearchField(
    query: String,
    textFieldModifier: Modifier,
    searchButtonTestTag: String = "searchSubmitButton",
    onSearch: () -> Unit,
    onValueChange: (String) -> Unit,
    placeholder: @Composable (() -> Unit)
) {
    val isQueryValid = query.isNotBlank()

...
